hphp/test/quick/dv_i0.php.expectf

Fatal error: An expression is expected here. in %s/dv_i0.php on line 3
